* Apply factor on domain parser
* Use tab name in CSV Export/Import
* Add bus management
* Use CSS to style label
* New icons
* Support timestamp field
* Add support for Python 3.7
* Use GtkApplication
* Validate dictionary items
* Add (i)like support to domain inversion
* Use Python 3
* Improve loading strategy by using views
* Use non conflicting keyboard shortcuts in sync with sao
* Use the context to get the suffix of window name
* Call on_change methods after setting default dtstart on calendar view

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Manage active field on search widget
* Reset record to its original state when discarding the popup window
* Add support of expand attribute on group tag
* Add the context model name in the screen context
* Use limit to expand tree
* Add keyword attribute to button tag
* Support field name on image tag
* Add option to check new version
* Show related record names for all windows
* Remove support of GTK+ 2.0
* Add icons on Many2One in editable tree
* Use translated values when exporting Reference and Selection fields

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Allow to export model and record name of Reference fields
* Re-position buttons on Binary/Image widget
* Improve treeview headers
* Update states of both toolbar and menu
* Improve toolbar order
* Make readonly, required and invalid widget themable
* Load user CSS theme
* Use profile name or login details in title

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Verify certificate with default CA
* Replace URL entry by a toolbar button

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Add support for GTK+ 3.0
* Add PYSON Widget
* Show records names in wizard title
* Add support for datetime_field to Reference
* Show non editable widget as insensitive
* Move info-bar at the bottom
* Manage readonly on fields translation dialog