@@ -1,3 +1,4 @@
+* Use dropdown for attachment
 * Apply factor on domain parser
 * Use tab name in CSV Export/Import
 * Add bus management
